[package]
name = "abwaves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
image = "0.25.1"
itertools = "0.13.0"
noise = { git = "https://github.com/Razaekel/noise-rs.git", rev = "4fea5f6" }
rand = { version = "0.8.5", default-features = false }
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
rayon = "1.10.0"
